Refactor: format, primitive types, ...