@@ -11,36 +11,51 @@ import selfadaptation.instrumentation.FeedbackLoopGatewayBuffer;
 
 import java.util.HashMap;
 import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
 
 /**
  * A class representing the signal based adaptation approach.
  */
 public class SignalBasedAdaptation extends GenericFeedbackLoop {
     /**
+     * A HashMap representing the buffers for the approach.
+     */
+    @Model
+    private Map<Mote, List<Double>> reliableMinPowerBuffers;
+
+    /**
+     * A map to keep track of which gateway has already sent the packet.
+     */
+    @Model
+    private FeedbackLoopGatewayBuffer gatewayBuffer;
+
+    /**
+     * A QualityOfService representing the required quality of service.
+     */
+    @Model
+    private QualityOfService qualityOfService;
+
+
+
+    /**
      * Constructs a new instance of the signal based adaptation approach with a given quality of service.
      * @param qualityOfService The quality of service for the received signal strength.
      */
-    public SignalBasedAdaptation(QualityOfService qualityOfService){
+    public SignalBasedAdaptation(QualityOfService qualityOfService) {
         super("Signal-based");
         this.qualityOfService = qualityOfService;
         gatewayBuffer = new FeedbackLoopGatewayBuffer();
         reliableMinPowerBuffers = new HashMap<>();
-
-
     }
 
-    /**
-     * A HashMap representing the buffers for the approach.
-     */
-    @Model
-    private HashMap<Mote, LinkedList<Double>> reliableMinPowerBuffers;
 
     /**
      * Returns the algorithm buffers.
      * @return The algorithm buffers.
      */
     @Model
-    private HashMap<Mote,LinkedList<Double>> getReliableMinPowerBuffers(){
+    private Map<Mote, List<Double>> getReliableMinPowerBuffers() {
         return this.reliableMinPowerBuffers;
     }
 
@@ -50,8 +65,8 @@ public class SignalBasedAdaptation extends GenericFeedbackLoop {
      * @param reliableMinPowerBuffer The buffer to put in the buffers.
      */
     @Model
-    private void putReliableMinPowerBuffer(Mote mote, LinkedList<Double> reliableMinPowerBuffer){
-        this.reliableMinPowerBuffers.put(mote,reliableMinPowerBuffer);
+    private void putReliableMinPowerBuffer(Mote mote, List<Double> reliableMinPowerBuffer) {
+        this.reliableMinPowerBuffers.put(mote, reliableMinPowerBuffer);
     }
 
     /**
@@ -63,23 +78,12 @@ public class SignalBasedAdaptation extends GenericFeedbackLoop {
     }
 
     /**
-     * A map to keep track of which gateway has already sent the packet.
-     */
-    @Model
-    private FeedbackLoopGatewayBuffer gatewayBuffer;
-    /**
-     * A QualityOfService representing the required quality of service.
-     */
-    @Model
-    private QualityOfService qualityOfService;
-
-    /**
      * Returns the lower bound of the approach.
      * @return The lower bound of the approach.
      */
     @Basic
-    public Double getLowerBound() {
-        return ((IntervalAdaptationGoal)qualityOfService.getAdaptationGoal("reliableCommunication")).getLowerBoundary();
+    public double getLowerBound() {
+        return ((IntervalAdaptationGoal) qualityOfService.getAdaptationGoal("reliableCommunication")).getLowerBoundary();
     }
 
     /**
@@ -87,25 +91,25 @@ public class SignalBasedAdaptation extends GenericFeedbackLoop {
      * @return The upper bound of the approach.
      */
     @Basic
-    public Double getUpperBound() {
-
-        return ((IntervalAdaptationGoal)qualityOfService.getAdaptationGoal("reliableCommunication")).getUpperBoundary();
+    public double getUpperBound() {
+        return ((IntervalAdaptationGoal) qualityOfService.getAdaptationGoal("reliableCommunication")).getUpperBoundary();
     }
 
+
     @Override
-    public void adapt(Mote mote, Gateway dataGateway) {
+    public void adapt(Mote mote, Gateway gateway) {
         /**
          First we check if we have received the message already from all gateways.
          */
-        getGatewayBuffer().add(mote,dataGateway);
+        getGatewayBuffer().add(mote, gateway);
         if (getGatewayBuffer().hasReceivedAllSignals(mote)) {
             /**
              * check what is the highest received signal strength.
              */
 
-            LinkedList<LoraTransmission> receivedSignals = getGatewayBuffer().getReceivedSignals(mote);
+            List<LoraTransmission> receivedSignals = getGatewayBuffer().getReceivedSignals(mote);
 
-            double receivedPower = receivedSignals.getFirst().getTransmissionPower();
+            double receivedPower = receivedSignals.get(0).getTransmissionPower();
 
             for (LoraTransmission transmission : receivedSignals) {
                 if (receivedPower < transmission.getTransmissionPower()) {
@@ -117,8 +121,8 @@ public class SignalBasedAdaptation extends GenericFeedbackLoop {
              * If the buffer has an entry for the current mote, the new highest received signal strength is added to it,
              * else a new buffer is created and added to which we can add the signal strength.
              */
-            LinkedList<Double> reliableMinPowerBuffer = new LinkedList<>();
-            if (getReliableMinPowerBuffers().keySet().contains(mote)) {
+            List<Double> reliableMinPowerBuffer = new LinkedList<>();
+            if (getReliableMinPowerBuffers().containsKey(mote)) {
                 reliableMinPowerBuffer = getReliableMinPowerBuffers().get(mote);
             }
             reliableMinPowerBuffer.add(receivedPower);
@@ -130,29 +134,26 @@ public class SignalBasedAdaptation extends GenericFeedbackLoop {
                 /**
                  * The average is taken of the 5 entries.
                  */
-                double average = 0;
-                for (Double power : getReliableMinPowerBuffers().get(mote)) {
-                    average += power;
-                }
-                average = average / 5;
+                double average = getReliableMinPowerBuffers().get(mote).stream()
+                    .mapToDouble(o -> o)
+                    .average()
+                    .orElse(0L);
+
                 /**
                  * If the average of the signal strengths is higher than the upper bound, the transmitting power is decreased by 1;
                  */
-                if (average > getUpperBound()) {
-                    if (getMoteProbe().getPowerSetting(mote) > -3) {
-                        getMoteEffector().setPower(mote, getMoteProbe().getPowerSetting(mote) - 1);
-                    }
+                if (average > getUpperBound() && getMoteProbe().getPowerSetting(mote) > -3) {
+                    getMoteEffector().setPower(mote, getMoteProbe().getPowerSetting(mote) - 1);
                 }
+
                 /**
                  * If the average of the signal strengths is lower than the lower bound, the transmitting power is increased by 1;
                  */
-                if (average < getLowerBound()) {
-                    if (getMoteProbe().getPowerSetting(mote) < 14) {
-                        getMoteEffector().setPower(mote, getMoteProbe().getPowerSetting(mote) + 1);
-                    }
+                if (average < getLowerBound() && getMoteProbe().getPowerSetting(mote) < 14) {
+                    getMoteEffector().setPower(mote, getMoteProbe().getPowerSetting(mote) + 1);
                 }
-                putReliableMinPowerBuffer(mote, new LinkedList<>());
 
+                putReliableMinPowerBuffer(mote, new LinkedList<>());
             }
         }
     }
