@@ -9,20 +9,24 @@ import util.Statistics;
 
 import java.util.HashMap;
 import java.util.LinkedList;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.Map;
 
 public class FeedbackLoopGatewayBuffer {
-    private HashMap<Mote,LinkedList<LinkedList<Pair<Gateway, LoraTransmission>>>> gatewayBuffer;
+    private Map<Mote, List<List<Pair<Gateway, LoraTransmission>>>> gatewayBuffer;
 
-    public FeedbackLoopGatewayBuffer(){
+    public FeedbackLoopGatewayBuffer() {
         gatewayBuffer = new HashMap<>();
     }
 
-    public void add(Mote mote, Gateway gateway){
-        if(gatewayBuffer.containsKey(mote)){
+    public void add(Mote mote, Gateway gateway) {
+        // FIXME this needs looking into, not sure how this is used in the actual simulation
+        var transmissions = Statistics.getInstance().getReceivedTransmissions(gateway.getEUI(), gateway.getEnvironment().getNumberOfRuns() - 1);
+
+        if(gatewayBuffer.containsKey(mote)) {
             boolean contains = false;
-            for (Pair<Gateway, LoraTransmission> pair : gatewayBuffer.get(mote).getLast()) {
-                if (pair.getLeft() == gateway){
+            for (Pair<Gateway, LoraTransmission> pair : ListHelper.getLast(gatewayBuffer.get(mote))) {
+                if (pair.getLeft() == gateway) {
                     contains = true;
                     break;
                 }
@@ -31,31 +35,27 @@ public class FeedbackLoopGatewayBuffer {
                 gatewayBuffer.get(mote).add(new LinkedList<>());
             }
 
-            // FIXME this needs looking into, not sure how this is used in the actual simulation
-            var transmissions = Statistics.getInstance().getReceivedTransmissions(gateway.getEUI(), gateway.getEnvironment().getNumberOfRuns() - 1);
-
-            gatewayBuffer.get(mote).getLast().add(new Pair<>(gateway, ListHelper.getLast(transmissions)));
+            ListHelper.getLast(gatewayBuffer.get(mote)).add(new Pair<>(gateway, ListHelper.getLast(transmissions)));
         } else {
-            LinkedList<Pair<Gateway,LoraTransmission>> buffer = new LinkedList<>();
-            var transmissions = Statistics.getInstance().getReceivedTransmissions(gateway.getEUI(), gateway.getEnvironment().getNumberOfRuns() - 1);
+            List<Pair<Gateway, LoraTransmission>> buffer = new LinkedList<>();
 
             buffer.add(new Pair<>(gateway, ListHelper.getLast(transmissions)));
 
-            LinkedList<LinkedList<Pair<Gateway,LoraTransmission>>> buffers = new LinkedList<>();
+            List<List<Pair<Gateway, LoraTransmission>>> buffers = new LinkedList<>();
             buffers.add(buffer);
             gatewayBuffer.put(mote,buffers);
         }
     }
 
-    public boolean hasReceivedAllSignals(Mote mote){
+    public boolean hasReceivedAllSignals(Mote mote) {
         return gatewayBuffer.get(mote).size() > 1;
     }
 
-    public LinkedList<LoraTransmission> getReceivedSignals(Mote mote){
-        LinkedList<LoraTransmission> result = new LinkedList<>();
+    public List<LoraTransmission> getReceivedSignals(Mote mote) {
+        List<LoraTransmission> result = new LinkedList<>();
 
         if (hasReceivedAllSignals(mote)) {
-            for (Pair<Gateway, LoraTransmission> pair : gatewayBuffer.get(mote).getFirst()){
+            for (Pair<Gateway, LoraTransmission> pair : gatewayBuffer.get(mote).get(0)) {
                 result.add(pair.getRight());
             }
             gatewayBuffer.get(mote).remove(0);
